full-moon/tests/cfxlua_cases/fail/parser/left_shift_assignment_operator/source.lua
local num = 1
<<= 2
